# CrimsonAtomtic

./: .gitignore  CLAUDE.md  Claude.MD  CrimsonAtomtic.slnx  Directory.Build.props  Directory.Packages.props  README.md  build.cmd  build.ps1
.github/workflows/: release.yml
docs/: CLAUDE.md  architecture.md  crimsonforge-coverage-gaps.md  data-policy.md  game-versions.md  pabgb-formats.md  paz-containers.md  release-process.md  save-body-format.md  save-format.md  status-archive.md  status.md  ui-design.md
docs/oct/: features-highlights.md  phpBB-markdown-syntax.md
scripts/: README.md  build_rust.ps1  build_ui.ps1  package_aot.ps1  setup_python_env.ps1
src/CrimsonAtomtic.Core/: CrimsonAtomtic.Core.csproj  IPlatformPaths.cs  ISingleInstanceGuard.cs
src/CrimsonAtomtic.RustInterop/: BatchOps.cs  CharacterRefRecord.cs  CrimsonAtomtic.RustInterop.csproj  IItemInfoCatalog.cs  IPalocCatalog.cs  IPazExtractor.cs  ISaveLoader.cs  IStringInfoCatalog.cs  InventoryItemRecord.cs  ItemInfoSummary.cs  ItemRecord.cs  ListRemoveBatchOp.cs  NativeDyeCatalogs.cs  NativeItemInfoCatalog.cs  NativeKeyInfoCatalogs.cs  NativeMainQuestChapter.cs  NativePalocCatalog.cs  NativePaverReader.cs  NativePazExtractor.cs  NativeSaveLoader.cs  NativeSideQuestFaction.cs  (+8 more)
tools/: CLAUDE.md  README.md  pyproject.toml
tools/analyze/: README.md  dump_catalogs.py  dump_challenges.py  dump_save_fields.py  extract_keycases.py
tools/common/: __init__.py  cli.py  paths.py
tools/diff/: README.md
tools/extract/: README.md  extract_save.py
tools/inspect/: README.md  inspect_save_body.py  inspect_save_section.py
tools/inspect/sa-investigations/: README.md  all_sa_far.py  feast_diff.py  feast_vs_hooves.py  missioninfo_ctypes.py  missioninfo_key_to_name.py  missioninfo_strings.py  sa_item_mission_map.py  search_x2.py
(+144 files in other folders)
