[project]
name = "crimson-atomtic-tools"
version = "0.1.0"
description = "Game-data tooling for the CrimsonAtomtic save editor"
requires-python = ">=3.12"

# This pyproject is metadata + ruff/pytest config only. The tools/ folder
# is NOT installed as a package; scripts use a sys.path bootstrap to import
# tools/common/. See tools/CLAUDE.md.
#
# crimson_rs is intentionally NOT a PyPI dependency either — it is installed
# locally from vendor/crimson-rs via `maturin develop --release`. See
# scripts/setup_python_env.ps1.
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Keep it strict for new code; loosen only with a written reason.
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]  # function-too-many-args — common in CLI entry points

[tool.pytest.ini_options]
testpaths = ["tests"]
